[gd_scene load_steps=2 format=2]

[ext_resource path="res://characters/ennemy/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="SpawnPosition_01" type="Marker2D" parent="SpawnPositions"]
position = Vector2( 70, 0 )

[node name="SpawnPosition_02" type="Marker2D" parent="SpawnPositions"]
position = Vector2( 170, 0 )

[node name="SpawnPosition_03" type="Marker2D" parent="SpawnPositions"]
position = Vector2( 270, 0 )

[node name="SpawnPosition_04" type="Marker2D" parent="SpawnPositions"]
position = Vector2( 370, 0 )

[node name="SpawnPosition_05" type="Marker2D" parent="SpawnPositions"]
position = Vector2( 470, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="add_score" from="." to="." method="score"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
